src/test/ui/borrowck/borrowck-while-break.stderr
error[E0381]: borrow of possibly uninitialized variable: `v`
  --> $DIR/borrowck-while-break.rs:7:20
   |
LL |     println!("{}", v);
   |                    ^ use of possibly uninitialized `v`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
